fix donate button alignment

--- a/app/assets/stylesheets/titlebar.less
+++ b/app/assets/stylesheets/titlebar.less
@@ -103,6 +103,9 @@
   border: none;
   background-color: transparent;
 }
+.app-titlebar-controls-action--donate {
+  display: inline-block;
+}
 
 
 @media (min-width: 48em) {
